# hivemind-main

./: .gitignore  Cargo.toml  LICENSE  README.md  description.md  explanation.md  package.json
apps/desktop/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  ipc.ts  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: ai_commands.rs  cef_init.rs  commands.rs  lib.rs  main.rs  state.rs
apps/desktop/src/components/: AddressBar.tsx  ChatComposer.tsx  ChatHeader.tsx  ChatMessage.tsx  ConversationSwitcher.tsx  EmptyWorkspace.tsx  MessageList.tsx  SettingsDrawer.tsx  Sidebar.tsx  StarterPrompts.tsx  StatusBar.tsx  TabStrip.tsx  Webview.tsx
apps/desktop/src/state/: AiSettingsContext.tsx  ChatContext.tsx  TabsContext.tsx
crates/ai-orchestrator/: Cargo.toml
crates/ai-orchestrator/src/: error.rs  lib.rs  orchestrator.rs  persistence.rs  settings.rs  state.rs  system_prompt.rs
crates/ai-provider/: Cargo.toml
crates/ai-provider/src/: anthropic.rs  error.rs  lib.rs  ollama.rs  provider.rs  router.rs  secrets.rs
crates/browser-core/: Cargo.toml
crates/browser-core/src/: error.rs  ids.rs  lib.rs  session.rs  tab.rs  workspace.rs
crates/ipc-types/: Cargo.toml
crates/ipc-types/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_init.sql
crates/storage/src/: ai_persistence.rs  lib.rs  pool.rs  sqlite_session_store.rs
