[package]
name = "hivemind-ai-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
async-stream.workspace = true
reqwest = { workspace = true }
eventsource-stream.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util", "sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
