[package]
name = "hivemind-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "HiveMind desktop application"

[lib]
name = "hivemind_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
chrono.workspace = true
ulid.workspace = true
url.workspace = true
sqlx = { workspace = true }

# Internal crates
hivemind-browser-core = { workspace = true }
hivemind-storage = { workspace = true }
hivemind-ipc-types = { workspace = true }
hivemind-ai-provider = { workspace = true }
hivemind-ai-orchestrator = { workspace = true }
futures = { workspace = true }

# CEF (Chromium Embedded Framework) — per-tab webviews.
# cef-dll-sys is also a direct dep purely so build.rs receives the
# DEP_CEF_DLL_CEF_DIR metadata for rpath wiring.
cef = { workspace = true }
cef-dll-sys = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
